# SISE_Ultimate_project

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run.py
Installation_notice/: gmail_setup.md
src/: app_gui.py  main.py  main_voice.py
src/agent_logic/: __init__.py  agent_looped.py  doc_utils.py  email_utils.py  mcp_connection.py  music_utils.py  pydantic_ai_agent.py  router_utils.py  test_agent.py
src/dashboard_ui/: app.py  components.py  hacker_console.py  ui.py
src/voice_processing/: audio_capture.py  audio_playback.py  test_vad.py
src/voice_processing/stt/: deepgram_provider.py  groq_provider.py  interfaces.py  main.py  transcription_manager.py  whisper_provider.py
src/voice_processing/tts/: edge_tts_provider.py  interfaces.py  synthesis_manager.py  test_tts.py  text_processor.py
