[project]
name = "sise-claw"
version = "0.1.0"
description = "AI assistant liant LLM et serveur MCP Google Workspace"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai>=0.0.14",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
    "mistralai>=1.0.0",
    "numpy>=2.4.2",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "whisper>=1.1.10",
    "streamlit>=1.40.0",
    "openai-whisper>=20250625",
    "edge-tts>=7.2.7",
    "customtkinter>=5.2.2",
    "python-docx>=1.2.0",
    "yt-dlp>=2026.3.3",
    "psutil>=7.2.2",
    "openpyxl>=3.1.5",
    "xlwings>=0.33.20",
    "python-vlc>=3.0.21203",
]
